--- a/oa-dev/fieldwork/index.html
+++ b/oa-dev/fieldwork/index.html
@@ -143,7 +143,7 @@
                         <div class="col-md-4 col-lg-4 map"></div>
                         <div class="col-md-4 col-lg-4 map">
                             <img src="img/pnw.png" class="image-responsive img-thumbnail">
-                            <a href="../pnw">
+                            <a href="../vulnerability/pnw">
                             <div class="overlay">
                                 <div class="text">
                                     <h3>Pacific Northwest</h3>
