--- a/oa-dev/index.html
+++ b/oa-dev/index.html
@@ -17,6 +17,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
@@ -74,27 +75,27 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
+              <i class="material-icons m-auto text-primary">warning</i>
             </div>
-            <h3>Vulnerability</h3>
+            <a href="vulnerability" style="text-decoration: none; color: #000;"><h3>Vulnerability</h3></a>
             <p class="lead mb-0">Exposure, sensitivity, and adaptive capacity</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
+              <i class="material-icons m-auto text-primary">extension</i>
             </div>
-            <h3>Adaptation</h3>
+            <a href="adaptation" style="text-decoration: none; color: #000;"><h3>Adaptation</h3></a>
             <p class="lead mb-0">Navigating harmful consequences</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
+              <i class="material-icons m-auto text-primary">people</i>
             </div>
-            <h3>Fieldwork</h3>
+            <a href="fieldwork" style="text-decoration: none; color: #000;"><h3>Fieldwork</h3></a>
             <p class="lead mb-0">Interviews with shellfish stakeholders</p>
           </div>
         </div>
@@ -107,23 +108,23 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/vulnerability.png');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Vulnerability</h2>
+          <a href="vulnerability" style="text-decoration: none; color: #000;"><h2>Vulnerability</h2></a>
           <p class="lead mb-0">Exposure, sensitivity, and adaptive capacity</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/adaptation.png');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Adaptation</h2>
+          <a href="adaptation" style="text-decoration: none; color: #000;"><h2>Adaptation</h2></a>
           <p class="lead mb-0">Navigating harmful consequences</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/fieldwork.png');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fieldwork</h2>
+          <a href="fieldwork" style="text-decoration: none; color: #000;"><h2>Fieldwork</h2></a>
           <p class="lead mb-0">Interviews with shellfish stakeholders</p>
         </div>
       </div>
@@ -137,22 +138,28 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Oregon State University</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/osu.png" alt="">
+            <a href="https://www.oregonstate.edu/" target="_blank" style="text-decoration: none; color: #000;">
+              <h5>Oregon State University</h5>
+            </a>
             <p class="font-weight-light mb-0"></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>NOAA</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/pacshell.png" alt="">
+            <a href="http://www.pacshell.org/" target="_blank" style="text-decoration: none; color: #000;">
+              <h5>Pacific Shellfish Institute</h5>
+            </a>
             <p class="font-weight-light mb-0"></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Pacific Shellfish Institute</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/noaa.png" alt="">
+            <a href="https://www.noaa.gov/" target="_blank" style="text-decoration: none; color: #000;">
+              <h5>NOAA</h5>
+            </a>
             <p class="font-weight-light mb-0"></p>
           </div>
         </div>
