--- a/oa-dev/index.html
+++ b/oa-dev/index.html
@@ -29,7 +29,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Ocean Acidification Vulnerability & Adaptation of Shellfisheries</a>
+    <a class="navbar-brand" href="#">Vulnerability & Adaptation to Ocean Acidification</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
