--- a/oa-dev/fieldwork/index.html
+++ b/oa-dev/fieldwork/index.html
@@ -35,15 +35,27 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark storymap-navbar" style="text-align: center;">
-    <a class="navbar-brand" href="#">
-        <img src="img/larvae22.png" class="d-inline-block align-top img-responsive">
-    </a>
-    <div class="ml-auto">
-        <a id="nav-title">Vulnerability to Ocean Acidification: Fieldwork</a>
-    </div>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto"></ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top storymap-navbar" style="text-align: center;">
+    <div class="container">
+        <a class="navbar-brand" href="../">Fieldwork</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+
+                    <!--Dropdown Pages-->
+                    <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="../background">Background</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="../vulnerability">Vulnerability</a>
+                        <a class="dropdown-item" href="../adaptation">Adaptation</a>
+                        <a class="dropdown-item" href="#">Fieldwork</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 
@@ -54,8 +66,8 @@
             <!--Landing Page-->
             <section data-scene="landing" data-background="assets/whiskey.mp4">
                 <div class="fullscreen text-center">
-                    <h1 class="display-4 d-flex justify-content-center">Vulnerability to Ocean Acidification</h1>
-                    <h3 class="display-4 d-flex justify-content-center"><small><small>Exposure, Sensitivity, and Adaptive Capacity of Shellfish Stakeholders</small></small></h3>
+                    <h1 class="display-4 d-flex justify-content-center">Vulnerability & Adaptation of Pacific Northwest Shellfisheries to Ocean Acidification: Fieldwork</h1>
+                    <h3 class="display-4 d-flex justify-content-center"><small><small>Interviews with shellfish stakeholders</small></small></h3>
                 </div>
             </section>
 
@@ -169,14 +181,14 @@
         <dt>
             <!--Facebook icon-->
             <a class="fab fa-facebook-square btn"
-               href="https://www.facebook.com/sharer/sharer.php?u=https%3A//briangkatz.github.io/oa-vulnerability/"
+               href="https://www.facebook.com/sharer/sharer.php?u=https%3A//briangkatz.github.io/oa/"
                style="top:30px;left:3px"
                target="_self"></a>
         </dt>
         <dt>
             <!--Twitter icon-->
             <a class="fab fa-twitter-square btn"
-               href="https://twitter.com/home?status=https%3A//briangkatz.github.io/oa-vulnerability/"
+               href="https://twitter.com/home?status=https%3A//briangkatz.github.io/oa/"
                style="top:55px;left:3px"
                target="_self"></a>
         </dt>
