--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>OA Adaptation</title>
+    <title>Adaptation to Ocean Acidification</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
@@ -76,7 +76,7 @@
             </section>
 
             <!-- Scene 1 -->
-            <section data-scene="whiskey" class="container-fluid">
+            <section data-scene="whiskey">
                 <h2 class="text-center">Whiskey Creek</h2>
                 <img src="img/cape_lookout.png" class="img-responsive img-thumbnail" alt="Cape Lookout">
                 <p>Whiskey Creek Shellfish Hatchery is located in Netarts Bay, Oregon. The water in this environment is especially favorable to shellfish growth because no major rivers feed into the bay.</p>
@@ -147,7 +147,7 @@
                 </video>
                 <br><br>
                 <div class="navbar-legend">
-                    <p class="text-left"><b>Funding Agencies</b></p>
+                    <p class="text-left"><b>Ocean Acidification & Hypoxia Projects by Funding Agency</b></p>
                     <div class="row">
                         <i class="fas fa-flask navbar-legend-row2 marker-color2-1"></i><span>NOAA</span>
                     </div>
@@ -168,6 +168,8 @@
                         <i class="fas fa-flask navbar-legend-row2 marker-color2-5"></i><span>Bonneville Power Administration</span>
                     </div>
                     <br>
+                    <p class="text-left">Source: <a href="https://www.oregonocean.info/index.php/ocean-acidification" target="_blank" style="text-decoration: none; color: black;">Oregon OAH Council</a></p>
+                    <br>
                 </div>
 
             </section>
@@ -187,8 +189,9 @@
             <!-- End -->
             <section data-scene="end" data-background="img/tanks.png">
                 <div class="fullscreen text-center">
-                    <br>
-                    <h1 class="thanks"  style="position: relative; top: 140px;">Thank you</h1>
+                    <h4 class="display-4 d-flex justify-content-center"><small><small>Thank you</small></small></h4>
+                    <br><br><br><br>
+                    <h3 class="attribution">Created by Brian Katz &#183; Oregon State University &#183; 2019</h3>
                 </div>
             </section>
 
