--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -27,6 +27,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://cdn.bootcss.com/chroma-js/1.3.3/chroma.min.js"></script>
+    <script src="https://unpkg.com/rbush@2.0.1/rbush.min.js"></script>
+    <script src="https://unpkg.com/labelgun@6.0.0/lib/labelgun.min.js"></script>
     <script src="js/bouncemarker.js"></script>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
