--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -25,6 +25,7 @@
     <link rel="shortcut icon" href="img/larvae.ico" type="image/x-icon">
 
     <!-- JavaScript Libraries -->
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -41,7 +42,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark storymap-navbar" style="text-align: center;">
     <a class="navbar-brand" href="#">
-        <img src="img/larvae22.png" class="d-inline-block align-top img-responsive">
+        <img src="img/larvae-icon.png" class="d-inline-block align-top img-responsive">
     </a>
     <div class="ml-auto">
         <a id="nav-title">Adaptation to Ocean Acidification</a>
@@ -78,9 +79,9 @@
             <!-- Scene 1 -->
             <section data-scene="whiskey">
                 <h2 class="text-center">Whiskey Creek</h2>
-                <img src="img/cape_lookout.png" class="img-responsive img-thumbnail" alt="Cape Lookout">
+                <img src="img/netarts.png" class="img-responsive img-thumbnail" alt="Cape Lookout">
                 <p class="storytext">Whiskey Creek Shellfish Hatchery is located in Netarts Bay, Oregon. The water in this environment is especially favorable to shellfish growth because no major rivers feed into the bay.</p>
-                <img src="img/netarts.png" class="img-responsive img-thumbnail" alt="Netarts Bay pump">
+                <img src="img/pump.png" class="img-responsive img-thumbnail" alt="Netarts Bay pump">
                 <p class="storytext">Water from Netarts Bay is directly pumped into the hatchery where fertilized eggs of shellfish (e.g. oysters and mussels) are grown into larval "seed" for both commercial and restoration purposes.<sup><small><sup>1</sup></small></sup></p>
                 <video controls autoplay loop class="embeded-photo img-responsive img-thumbnail">
                     <source src="img/seed.mp4" type="video/mp4">
@@ -91,10 +92,8 @@
             <!-- Scene 2 -->
             <section data-scene="network">
                 <h2 class="text-center">Importance to Network</h2>
-                <p class="storytext">Whiskey Creek is the largest shellfish hatchery in the United States and produces nearly 70% of the seed used by independent shellfish growers in the Pacific Northwest.</p>
-                <video controls autoplay loop width="500px" class="embeded-photo img-responsive img-thumbnail">
-                    <source src="img/oyster_bags.mp4" type="video/mp4"/>
-                </video>
+                <p class="storytext">Whiskey Creek is the largest shellfish hatchery in the United States<sup><small><sup>2</sup></small></sup> and produces nearly 70% of the seed used by independent shellfish growers in the Pacific Northwest.</p>
+                <img src="img/oyster_hand.png" class="img-responsive img-thumbnail" alt="Oyster hand">
                 <p class="storytext">The Pacific Northwest shellfish industry supports thousands of people's livelihoods and contributes nearly $270 million per year to the regional economy.<sup><small><sup>2</sup></small></sup> Many indigenous tribes across the PNW also place cultural value on shellfish, and have done so for millennia.</p>
                 <div class="navbar-legend">
                     <p class="text-center" style="font-size:22px;"><b>Shellfish Stakeholders</b></p>
@@ -110,8 +109,9 @@
             <!-- Scene 3 -->
             <section data-scene="seed">
                 <h2 class="text-center">Oyster Seed Crisis</h2>
-                <p class="storytext">In the summer of 2007, Whiskey Creek Shellfish Hatchery experienced an unexpected loss of nearly 75% of their larvae due to a period of extreme OA. This sudden seed shortage had reverberating consequences for the regional network of shellfish stakeholders who depended on the seed produced by Whiskey Creek.</p>
-                <p class="storytext">Researchers at Oregon State University began working closely with stakeholders at Whiskey Creek to assess the biological sensitivity of oyster larvae to OA and monitor estuarine water chemistry in real-time.</p>
+                <p class="storytext">In three consecutive summers between 2006-2008, Whiskey Creek Shellfish Hatchery experienced an unprecedented loss of nearly 75% of their larvae due to extreme OA conditions.</p>
+                <p class="storytext">This sudden seed shortage had reverberating consequences for the regional network of shellfish stakeholders who depended on the seed produced by Whiskey Creek, demonstrating how seed shortages drive vulnerability of shellfisheries to ocean acidification.</p>
+                <p class="storytext">Researchers at Oregon State University began working closely with stakeholders at Whiskey Creek to assess the biological sensitivity of oyster larvae to OA and monitor estuarine water chemistry in near real-time.</p>
                 <img src="img/larvae.png" class="img-responsive img-thumbnail" alt="oyster larvae">
                 <p class="caption">Damage to oyster larvae from acidified water (right) compared to healthy larvae (left).</p>
                 <p class="caption">Micrograph by <a href="https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1002/grl.50449">Oregon State University</a></p>
@@ -134,8 +134,9 @@
                 <video controls autoplay loop width="500px" class="embeded-photo img-responsive img-thumbnail">
                     <source src="img/co2_sensor.mp4" type="video/mp4"/>
                 </video>
+                <br>
                 <div class="navbar-legend">
-                    <p class="text-left"><b>Ocean Acidification & Hypoxia Projects by Funding Agency</b></p>
+                    <p class="caption"><b>Ocean Acidification & Hypoxia Projects by Funding Agency</b></p>
                     <div class="row">
                         <i class="fas fa-flask navbar-legend-row2 marker-color2-1"></i><span>NOAA</span>
                     </div>
@@ -151,7 +152,7 @@
                     <div class="row">
                         <i class="fas fa-flask navbar-legend-row2 marker-color2-5"></i><span>Bonneville Power Administration</span>
                     </div>
-                    <p class="text-left">Source: <a href="https://www.oregonocean.info/index.php/ocean-acidification" target="_blank" style="text-decoration: none; color: black;">Oregon OAH Council</a></p>
+                    <p class="caption">Source: <a href="https://www.oregonocean.info/index.php/ocean-acidification" target="_blank">Oregon OAH Council</a></p>
                 </div>
 
             </section>
@@ -160,8 +161,9 @@
             <section data-scene="success">
                 <h2 class="text-center">Post-Adaptation Success</h2>
                 <p class="storytext">In the last few years, Whiskey Creek has been able to return their seed production to levels unseen since before the seed crisis of the late 2000s.</p>
-                <img class="embeded-photo img-responsive img-thumbnail" src="img/algae_rack.png"/>
+                <img class="embeded-photo img-responsive img-thumbnail" src="img/hatchery.png"/>
                 <p class="storytext">Whiskey Creek Shellfish Hatchery is a shining example of how stakeholders faced with high exposure to ocean acidification can still overcome potential harm by following an adaptation pathway.</p>
+                <img class="embeded-photo img-responsive img-thumbnail" src="img/algae_rack.png"/>
             </section>
 
             <!-- End -->
@@ -246,6 +248,7 @@
 </div>
 
 <!-- Main JavaScript -->
+<script src="js/spatialsankey.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
 </body>
