--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <title>Ocean Acidification Vulnerability & Adaptation Pathways</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="dist/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+  <link href="dist/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="dist/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 
@@ -27,7 +27,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="mainNav">
   <div class="container">
     <a class="navbar-brand" href="#">Vulnerability & Adaptation to Ocean Acidification</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,6 @@
             Pages
           </a>
 
-          <!--Dropdown Pages-->
           <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="vulnerability/pnw">Map</a>
             <div class="dropdown-divider"></div>
@@ -56,7 +55,6 @@
   </div>
 </nav>
 
-  <!-- Masthead -->
   <header class="masthead text-white text-center">
     <div class="overlay"></div>
     <div class="container">
@@ -69,14 +67,13 @@
     </div>
   </header>
 
-  <!-- Icons Grid -->
-  <section class="features-icons bg-light text-center">
+  <section class="features-icons bg-dark text-center" id="iconSection">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="material-icons m-auto text-primary">warning</i>
+            <div class="features-icons-icon d-flex justify-content-center">
+              <a href="vulnerability"><i class="material-icons m-auto text-primary">warning</i></a>
             </div>
             <a href="vulnerability" style="text-decoration: none; color: #000;"><h3>Vulnerability</h3></a>
             <p class="lead mb-0">Exposure, sensitivity, and adaptive capacity</p>
@@ -84,75 +81,66 @@
         </div>
         <div class="col-lg-6">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="material-icons m-auto text-primary">extension</i>
+            <div class="features-icons-icon d-flex justify-content-center">
+              <a href="adaptation"><i class="material-icons m-auto text-primary">extension</i></a>
             </div>
             <a href="adaptation" style="text-decoration: none; color: #000;"><h3>Adaptation</h3></a>
-            <p class="lead mb-0">Navigating harmful consequences</p>
+            <p class="lead mb-0">Navigating adverse consequences</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Image Showcases -->
-  <section class="showcase">
+  <section class="showcase" id="showcaseSection">
     <div class="container-fluid p-0">
-      <div class="row no-gutters">
+      <div class="row no-gutters bg-dark">
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/vulnerability.png');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <a href="vulnerability" style="text-decoration: none; color: #000;"><h2>Vulnerability</h2></a>
+          <a href="vulnerability" style="text-decoration: none; color: #fff;"><h2>Vulnerability</h2></a>
           <p class="lead mb-0">Exposure, sensitivity, and adaptive capacity</p>
         </div>
       </div>
-      <div class="row no-gutters">
+      <div class="row  bg-dark">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/adaptation.png');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <a href="adaptation" style="text-decoration: none; color: #000;"><h2>Adaptation</h2></a>
-          <p class="lead mb-0">Navigating harmful consequences</p>
+          <a href="adaptation" style="text-decoration: none; color: #fff;"><h2>Adaptation</h2></a>
+          <p class="lead mb-0">Navigating adverse consequences</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+  <section class="testimonials text-center bg-dark" id="partnerSection">
     <div class="container">
       <h2 class="mb-5">Partners</h2>
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/osu.png" alt="">
-            <a href="https://www.oregonstate.edu/" target="_blank" style="text-decoration: none; color: #000;">
-              <h5>Oregon State University</h5>
+            <a href="https://www.oregonstate.edu/" target="_blank" style="text-decoration: none; color: #fff;">
+              <img class="img-fluid rounded-circle mb-3" src="img/osu.png" alt="Oregon State University">
             </a>
-            <p class="font-weight-light mb-0"></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/pacshell.png" alt="">
-            <a href="http://www.pacshell.org/" target="_blank" style="text-decoration: none; color: #000;">
-              <h5>Pacific Shellfish Institute</h5>
+            <a href="https://oceanacidification.noaa.gov/" target="_blank" style="text-decoration: none; color: #fff;">
+              <img class="img-fluid rounded-circle mb-3" src="img/oap140.png" alt="NOAA Ocean Acidification Program">
             </a>
-            <p class="font-weight-light mb-0"></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/noaa.png" alt="">
-            <a href="https://www.noaa.gov/" target="_blank" style="text-decoration: none; color: #000;">
-              <h5>NOAA</h5>
+            <a href="http://www.pacshell.org/" target="_blank" style="text-decoration: none; color: #fff;">
+              <img class="img-fluid rounded-circle mb-3" src="img/pacshell.png" alt="Pacific Shellfish Institute">
             </a>
-            <p class="font-weight-light mb-0"></p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
     <div class="container">
@@ -165,37 +153,31 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer bg-light">
+  <footer class="footer bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
           <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
+<!--            <li class="list-inline-item">-->
+<!--              <a href="#">About</a>-->
+<!--            </li>-->
+<!--            <li class="list-inline-item">&sdot;</li>-->
             <li class="list-inline-item">
               <a href="mailto:katzbr@oregonstate.edu">Contact</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Brian G. Katz 2019. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; <a href="https://briangkatz.github.io/">Brian G. Katz</a> 2020. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="#">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://briangkatz.github.io/oa">
                 <i class="fab fa-facebook fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item mr-3">
-              <a href="#">
+              <a href="https://twitter.com/intent/tweet?url=https://briangkatz.github.io/oa&text=">
                 <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
               </a>
             </li>
           </ul>
@@ -205,8 +187,8 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="dist/jquery/jquery.min.js"></script>
+  <script src="dist/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
