--- a/background/index.html
+++ b/background/index.html
@@ -162,7 +162,7 @@
                     <br>
                     <div class="text-center"><iframe class="img-responsive img-thumbnail" src="https://www.youtube.com/embed/7h08ok3hFSs?vq=hd1080&autoplay=0&loop=0&rel=0&controls=0&showinfo=0&mute=0&start=44&end=115" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
                         <br>
-                        <p class="storytext"><a href="https://www.youtube.com/watch?v=7h08ok3hFSs" style="font-size:18px;">Video</a> by Oregon State University</p>
+                        <p class="storytext"><a href="https://www.youtube.com/watch?v=7h08ok3hFSs" style="font-size:1em;">Video</a> by Oregon State University</p>
                     </div>
                     <br>
                     <p class="storytext">The ocean naturally absorbs carbon dioxide (CO<sub>2</sub>) from the atmosphere - like a giant "carbon sink". Human
@@ -182,7 +182,7 @@
                     <br><br>
                     <img src="assets/larvae.png" class="img-responsive img-thumbnail" alt="responsive image"
                          alt="oyster larvae">
-                    <p class="storytext">The picture above is a micrograph of Pacific oyster larvae raised under normal conditions (left) and acidified water (right). Source: <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/grl.50449" target="_blank">Waldbusser, et al. 2013</a></p>
+                    <p class="storytext">The picture above is a micrograph of Pacific oyster larvae raised under normal conditions (left) and acidified water (right). Source: <a style="font-size:1em;" href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/grl.50449" target="_blank">Waldbusser, et al. 2013</a></p>
                 </section>
 
                 <section data-scene="future">
