--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -179,7 +179,7 @@
                     <p class="storytext">This sudden seed shortage had reverberating consequences for the regional network of shellfish stakeholders who depended on the seed produced by Whiskey Creek, demonstrating how seed shortages drive vulnerability of shellfisheries to ocean acidification.</p>
                     <p class="storytext">Researchers at Oregon State University began working closely with stakeholders at Whiskey Creek to assess the biological sensitivity of oyster larvae to OA and monitor estuarine water chemistry in near real-time.</p>
                     <img src="img/larvae.png" class="img-responsive img-thumbnail" alt="oyster larvae">
-                    <p class="storytext">The picture above is a micrograph of Pacific oyster larvae raised under normal conditions (left) and acidified water (right). Source: <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/grl.50449" target="_blank">Waldbusser, et al. 2013.</a></p>
+                    <p class="storytext">The picture above is a micrograph of Pacific oyster larvae raised under normal conditions (left) and acidified water (right). Source: <a style="font-size:1em;" href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/grl.50449" target="_blank">Waldbusser, et al. 2013.</a></p>
                 </section>
 
                 <!-- Scene 4 -->
@@ -201,7 +201,7 @@
                     </video>
                     <br>
                     <div class="navbar-legend">
-                        <p class="caption"><b>Ocean Acidification & Hypoxia Projects by Funding Agency</b></p>
+                        <p class="caption" style="font-size: 18px;"><b>Ocean Acidification & Hypoxia Projects by Funding Agency</b></p>
                         <div class="row">
                             <i class="fas fa-flask navbar-legend-row2 marker-color2-1"></i><span>NOAA</span>
                         </div>
