--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -21,7 +21,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/sb-admin.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="dist/storymap.2.4.css"/>
+    <link rel="stylesheet" type="text/css" href="dist/storymap.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 
     <!-- Favicon -->
@@ -37,7 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://unpkg.com/rbush@2.0.1/rbush.min.js"></script>
     <script src="https://unpkg.com/labelgun@6.0.0/lib/labelgun.min.js"></script>
-    <script src="dist/storymap.2.4.js"></script>
+    <script src="dist/storymap.js"></script>
     <script src="https://d3js.org/d3.v3.min.js"></script>
 
 </head>
