--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -82,7 +82,7 @@
 
                 <!--GitHub-->
                 <li class="nav-item">
-                    <a class="nav-link" id="github" data-toggle="tooltip" data-placement="top" title="GitHub" href="https://www.github.com/briangkatz/" target="_blank">
+                    <a class="nav-link" id="github" data-toggle="tooltip" data-placement="top" title="GitHub" href="https://www.github.com/briangkatz/oa/adaptation" target="_blank">
                         <i class="fab fa-fw fa-git-square align-center"></i>
                         <span class="nav-icon-text">GitHub</span>
                     </a>
@@ -296,6 +296,16 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script src="js/sb-admin.min.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBD1NPJYLB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZBD1NPJYLB');
+    </script>
 
 </body>
 
