--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <!--GitHub-->
         <li class="nav-item">
-            <a class="nav-link" id="github" data-toggle="tooltip" data-placement="top" title="GitHub" href="https://www.github.com/briangkatz/" target="_blank">
+            <a class="nav-link" id="github" data-toggle="tooltip" data-placement="top" title="GitHub" href="https://www.github.com/briangkatz/oa" target="_blank">
                 <i class="fab fa-fw fa-git-square align-center"></i>
                 <span class="nav-icon-text">GitHub</span>
             </a>
@@ -273,6 +273,16 @@
   <script src="dist/jquery/jquery.min.js"></script>
   <script src="dist/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="js/sb-admin.min.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2GNHFTCLS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-F2GNHFTCLS');
+    </script>
 
 </body>
 
