--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -272,6 +272,9 @@
                         <hr>
                         <h5 style="font-size:1.25em;"><b>Author: <a href="https://briangkatz.github.io" target="_blank">Brian G. Katz</a></b></h5>
                         <p><small><a href="https://ceoas.oregonstate.edu/" target="_blank" style="font-size:1em;">College of Earth, Ocean, and Atmospheric Sciences</a> | <a href="https://oregonstate.edu" target="_blank" style="font-size:1em;">Oregon State University</a> | 2020</small></p>
+                        <p><small>Screenshots are open for use with the following citation:</small></p>
+                        <p><small>Katz, B. (2020). <i>Vulnerability and adaptation of Pacific Northwest shellfisheries to ocean acidification</i> [Master's thesis, Oregon State University]. Oregon State University.</small></p>
+                        <p><small>Special thanks to <a href="https://www.linkedin.com/in/virginiakatz/" style="color:black;text-decoration:none;font-size:1em;">Ginny Katz</a> for illustrations and video editing.</small></p>
                         <div class="container d-flex h-100">
                             <div class="row justify-content-center align-self-center">
                               <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
@@ -285,7 +288,7 @@
                               </div>
                             </div>
                         </div>
-                        <p>Special thanks to <a href="https://www.linkedin.com/in/virginiakatz/" style="color:black;text-decoration:none;font-size:1em;">Ginny Katz</a> for illustrations and video editing.</p>                    </div>
+                    </div>
                 </div>
             </div>
         </div>
