--- a/index.html
+++ b/index.html
@@ -250,6 +250,8 @@
                   <hr>
                   <h5><b>Author: <a href="https://briangkatz.github.io" target="_blank">Brian G. Katz</a></b></h5>
                   <p><small><a href="https://ceoas.oregonstate.edu/" target="_blank">College of Earth, Ocean, and Atmospheric Sciences</a> | <a href="https://oregonstate.edu" target="_blank">Oregon State University</a> | 2020</small></p>
+                  <p><small>Screenshots are open for use with the following citation:</small></p>
+                  <p><small>Katz, B. (2020). <i>Vulnerability and adaptation of Pacific Northwest shellfisheries to ocean acidification</i> [Master's thesis, Oregon State University]. Oregon State University.</small></p>
                   <div class="container d-flex h-100">
                   <div class="row justify-content-center align-self-center">
                       <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
