updated links to github repo

--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -82,7 +82,7 @@
 
                 <!--GitHub-->
                 <li class="nav-item">
-                    <a class="nav-link" id="github" data-toggle="tooltip" data-placement="top" title="GitHub" href="https://www.github.com/briangkatz/oa/adaptation" target="_blank">
+                    <a class="nav-link" id="github" data-toggle="tooltip" data-placement="top" title="GitHub" href="https://www.github.com/briangkatz/oa" target="_blank">
                         <i class="fab fa-fw fa-git-square align-center"></i>
                         <span class="nav-icon-text">GitHub</span>
                     </a>
