--- a/background/index.html
+++ b/background/index.html
@@ -277,7 +277,7 @@
             </dt>
             <dt>
                 <!--github icon-->
-                <a class="fa fa-git-square btn" href="https://github.com/briangkatz/oa/background" style="color:black;top:80px;"
+                <a class="fa fa-git-square btn" href="https://github.com/briangkatz/oa" style="color:black;top:80px;"
                    target="_blank"></a>
             </dt>
             <dt>
