--- a/background/index.html
+++ b/background/index.html
@@ -340,21 +340,20 @@
 
     </div>
 
-<!-- Main JavaScript -->
-<script src="js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
-<script src="js/sb-admin.min.js"></script>
+	<!-- Main JavaScript -->
+	<script src="js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+	<script src="js/sb-admin.min.js"></script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110256930-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-KHH7KYDW5C"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-  gtag('config', 'UA-110256930-2');
-</script>
-
+	  gtag('config', 'G-KHH7KYDW5C');
+	</script>
 
 </body>
 </html>
