--- a/index.html
+++ b/index.html
@@ -276,15 +276,15 @@
   <script src="dist/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="js/sb-admin.min.js"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2GNHFTCLS"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-F2GNHFTCLS"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-      gtag('config', 'G-F2GNHFTCLS');
-    </script>
+	  gtag('config', 'G-F2GNHFTCLS');
+	</script>
 
 </body>
 
