--- a/adaptation/index.html
+++ b/adaptation/index.html
@@ -300,15 +300,15 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script src="js/sb-admin.min.js"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBD1NPJYLB"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBD1NPJYLB"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-      gtag('config', 'G-ZBD1NPJYLB');
-    </script>
+	  gtag('config', 'G-ZBD1NPJYLB');
+	</script>
 
 </body>
 
